1.1.12
    Clean up testing (Joseph Holsten)

1.1.11
    Merge many rets4r forks (Joseph Holsten)

1.1.10
    ResponseParser#parse_common: should be _not_ equals (Jacob Basham)

1.1.9
    (no change)

1.1.8
   Client, ResponseParser#parse_common: Parser cleanup (Jacob Basham)

1.1.7
    Client, Client#initialize, Client#create_query_string, Client#request:
      Cleaned up files to be 80 skinny, added CGI escaping of data (Jacob Basham)

1.1.5
    gemspec: fix date error (Jacob Basham)

1.1.3
    gemspec: update (Jacob Basham)

1.1.2
    ResponseParser#parse_key_value: Accept CARETS response (John Wulff)

1.1.1
    ResponseParser#parse_key_value: Handle nils (John Wulff)

1.1.0
    Strip key value pairs for CAPABILITY_LIST endpoints (John Wulff)
    Add lib/rets4r to default load path (John Wulff)

1.0.0
    See changes in 9f7ff731250abc1f73b21cb01d3a6fc3a6617e73 (John Wulff)

    Parser#parse_compact_line: simplify split.
    Parser#parse_data: remove legacy support.
    Auth::authenticate: handle missing www-authenticate header.
    Auth::parse_header: strip keys, values.
    Client#initialize: method signature changed, removed options, added format.
    Client#set_parser_class, Client#get_parser_class,
      Client#parser_class, Client#parser_class=, Client#set_output,
      Client#get_output, Client#output, Client#output=: removed, callers changed.
    Lay groundwork for non-compact format requests
    Client::DEFAULT_METHOD: changed to GET
    Client::DEFAULT_USER_AGENT: changed to Firefox
    Client#login: handle absolute uris
    Client#parse: Removed. Changed callers to access parser directly.
    Client#get_metadata: method signature changed, format removed. Use format instance variable.
    Client#download_metadata: added
    Client#get_object: handle text/xml responses
!!!      Client#get_object: remove quote support from multipart boundary handling
    Client#count: added
    Client#basic_encode: added