@@ -1,4 +1,5 @@
 1.1.12
+    Merge example settings into a config file (Joseph Holsten)
     Clean up testing (Joseph Holsten)
 
 1.1.11
